# ready-layer-two

./: .gitignore  LICENSE  Makefile  README.md  package.json  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
app/service-clients/: competition.ts  user-registry.ts
app/src/: common.ts  demo.ts  evaluator.ts
demo/: .dockerignore  Dockerfile  Makefile  evaluator.py  requirements.txt  train_models.py
services/: Cargo.toml
